@@ -71,6 +71,7 @@ wxMSW:
 - Fixed a crash when dismissing wxPrintDialog under VC++ 7.1.
 - Fixed out by one error in wxTextCtrl::GetStyle.
 - Fixed problem with getting input in universal/unicode build of wxMSW.
+- Link oleacc.lib conditionally
 
 wxWinCE:
 
